--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Drakinite",
+  "author": "JL102",
   "license": "ISC",
   "dependencies": {
     "archiver": "^5.0.2",
