--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "pack-mmip",
-  "version": "0.0.5",
-  "description": "Automatic packer for MediaMonkey Extension (MMIP) files. Run npm install, and Add this folder to your system PATH, then you can run pack-mmip.",
+  "version": "1.0.0",
+  "description": "Automatic packer for MediaMonkey Extension (MMIP) files. Run npm install, and Add this folder to your system PATH, then you can run pack-mmip and pack-zip.",
   "main": "pack-mmip.bat",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "JL102",
   "license": "ISC",
   "dependencies": {
-    "archiver": "^5.0.2",
-    "colors": "^1.4.0",
-    "open-file-explorer": "^1.0.2"
+    "archiver": "^5.1.0",
+    "colors": "^1.4.0"
   }
 }
