--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pack-mmip",
-  "version": "2.0.0-beta1",
+  "version": "2.0.0-beta2",
   "description": "Automatic packer for MediaMonkey Extension (MMIP) files. Run npm install, and Add this folder to your system PATH, then you can run pack-mmip and pack-zip.",
   "main": "pack-mmip.bat",
   "author": {
@@ -18,10 +18,10 @@
   "dependencies": {
     "archiver": "~7.0.1",
     "chalk": "^5.3.0",
-    "colors": "~1.4.0",
+    "chokidar": "^4.0.1",
     "glob": "~11.0.0",
     "minimatch": "~10.0.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.2"
   },
   "repository": {
     "type": "git",
