--- a/tsconfig-template.jsonc
+++ b/tsconfig-template.jsonc
@@ -11,6 +11,7 @@
 		"forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
 		"strict": true /* Enable all strict type-checking options. */,
 		"noImplicitAny": false /* Enable error reporting for expressions and declarations with an implied 'any' type. */,
-		"skipLibCheck": true /* Skip type checking all .d.ts files. */
+		"skipLibCheck": true /* Skip type checking all .d.ts files. */,
+        "strictPropertyInitialization": false  /* Classes that extend Control use "initialize" as a pseudo-constructor */,
 	}
 }
