beta5 - Rename mediamonkey-types to mediamonkey - fix ts compile not showing errors - fix printVersion - spawn explorer when dev fails if addon already installed - add support for JS inside TS projects
Signed-off-by: JL102 <jordanlees@mailbox.org>

--- a/tsconfig-template.jsonc
+++ b/tsconfig-template.jsonc
@@ -5,7 +5,7 @@
 		"module": "es2022" /* Specify what module code is generated. */,
 		"rootDir": "." /* Specify the root folder within your source files. */,
 		"moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
-		"types": [ "mediamonkey-types" ] /* Specify type package names to be included without being referenced in a source file. */,
+		"types": [ "mediamonkey" ] /* Specify type package names to be included without being referenced in a source file. */,
 		"isolatedModules": false /* Ensure that each file can be safely transpiled without relying on other imports. */,
 		"esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
 		"forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
@@ -13,5 +13,7 @@
 		"noImplicitAny": false /* Enable error reporting for expressions and declarations with an implied 'any' type. */,
 		"skipLibCheck": true /* Skip type checking all .d.ts files. */,
         "strictPropertyInitialization": false  /* Classes that extend Control use "initialize" as a pseudo-constructor */,
+        "outDir": ".output" /* *You are not expected to run `tsc` on your own, so this output folder is not used. This setting is enabled so that the allowJs flag can be set to true. */,
+        "allowJs": true /* Enables type hinting in JS files */,
 	}
 }
